# alfred-jetbrains-explorer

./: README.md  info.plist  pyproject.toml
src/: classes.py  main.py  utils.py
